--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Copy this file to .env and fill values
-MONGO_URI=mongodb://localhost:27017/dailynews
+MONGO_URI=mongodb+srv://lokilokiloki:lokilokiloki@cluster0.beib5de.mongodb.net/?appName=Cluster0
 PORT=5000
 
 # JWT secret for signing tokens
