--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
-  {
+{
     "name": "dailynews",
     "version": "1.0.0",
     "description": "News backend with admin and users. Admin can CRUD news; users can view news by topic.",
     "main": "src/server.js",
     "scripts": {
-      "start": "node src/server.js",
-      "dev": "nodemon src/server.js"
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js"
     },
     "keywords": [],
     "author": "Lokeshwar Panuganti",
     "license": "MIT",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "cloudinary": "^1.32.0",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^7.5.0",
-      "multer": "^1.4.5-lts.1",
-      "streamifier": "^0.1.1"
+        "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.32.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.5.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^7.0.10",
+        "streamifier": "^0.1.1"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     }
-  }
+}
