major changes to profile end points

--- a/.env
+++ b/.env
@@ -4,20 +4,20 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 
 # Database
-MONGO_URI=your_mongodb_uri
+MONGO_URI=
 
 # Authentication
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=
 JWT_EXPIRES_IN=7d
 
 # Email Configuration (SMTP)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_email_address  # Replace with your email
-SMTP_PASSWORD=your_app_password # Use App Password if 2FA is enabled
+SMTP_USER=  # Replace with your email
+SMTP_PASSWORD= # Use App Password if 2FA is enabled
 EMAIL_FROM_NAME='DailyN'
 
 # Cloudinary credentials
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
