.gitignore and .env updates

--- a/.env
+++ b/.env
@@ -1,23 +1,23 @@
 # Server Configuration
 PORT=3000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=yourrenderurl
 
 # Database
-MONGO_URI=
+MONGO_URI=yourmongourl
 
 # Authentication
-JWT_SECRET=
+JWT_SECRET=yourjwtsecret
 JWT_EXPIRES_IN=7d
 
 # Email Configuration (SMTP)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=  # Replace with your email
-SMTP_PASSWORD= # Use App Password if 2FA is enabled
+SMTP_HOST=yourhost
+SMTP_PORT=yourport
+SMTP_USER=youruser
+SMTP_PASSWORD=yourpassword
 EMAIL_FROM_NAME='DailyN'
 
 # Cloudinary credentials
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=yourcloudname
+CLOUDINARY_API_KEY=yourapikey
+CLOUDINARY_API_SECRET=yourapisecret
