--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
 # Server Configuration
 PORT=3000
 NODE_ENV=development
@@ -17,6 +16,11 @@ SMTP_PORT=yourport
 SMTP_USER=youruser
 SMTP_PASSWORD=yourpassword
 EMAIL_FROM_NAME='DailyN'
+
+# Email Service Provider
+EMAIL_PROVIDER=sendgrid
+SENDGRID_API_KEY=SENDGRID_API_KEY
+EMAIL_FROM=EMAIL_FROM
 
 # Cloudinary credentials
 CLOUDINARY_CLOUD_NAME=yourcloudname
