--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Lokeshwar Panuganti",
     "license": "MIT",
     "dependencies": {
+        "@sendgrid/mail": "^8.1.6",
         "bcryptjs": "^2.4.3",
         "cloudinary": "^1.32.0",
         "cors": "^2.8.5",
@@ -20,6 +21,7 @@
         "mongoose": "^7.5.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^7.0.10",
+        "nodemailer-sendgrid": "^1.0.3",
         "streamifier": "^0.1.1"
     },
     "devDependencies": {
